@@ -3,6 +3,8 @@
   * Remove duplicates from the configuration file search path under Windows.
   * Use viewbox offset when setting affine transform translation (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19943).
+  * Ensure equally sized tiles for -crop 11x2@ (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18322).
 
 2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.3-9, SVN revision 6092
